@@ -1,5 +1,11 @@
 2013-07-30  Tassilo Horn  <tsdh@gnu.org>
 
+	* gnus-sum.el (gnus-subthread-sort-functions): New defcustom.
+	(gnus-sort-threads-recursively): Delete defcustom.
+	(gnus-sort-threads-recursive): Adapt accordingly.
+
+2013-07-30  Tassilo Horn  <tsdh@gnu.org>
+
 	* gnus-sum.el (gnus-sort-subthreads-recursive): New function.
 	(gnus-sort-threads-recursive): Use it.
 	(gnus-sort-threads): Unconditionally call `gnus-sort-threads-recursive'
